# mypkg

./: README.md  package.xml  setup.py  test.bash
.github/workflows/: test.yml
mypkg/: timer_node.py
test/: test.bash  test_copyright.py
test/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
test/log/: latest_build
